--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,16 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+}
+
+body {
+  font-size: calc(10px + 2vmin);
 }
 
 .App-link {
